@@ -37,7 +37,7 @@ else:
 
 
 
-test = TestSCons.TestSCons()
+test = TestSCons.TestSCons(match=TestSCons.match_re_dotall)
 
 #
 test.subdir('repository', 'work1', 'work2', 'work3')
@@ -100,7 +100,8 @@ main(int argc, char *argv[])
 test.writable('repository', 0)
 
 #
-test.run(chdir = 'work1', options = opts, arguments = ".")
+test.run(chdir = 'work1', options = opts, arguments = ".",
+         stderr=TestSCons.noisy_ar)
 
 test.run(program = work1_foo, stdout =
 """repository/aaa.c
@@ -123,7 +124,8 @@ bbb(void)
 }
 """)
 
-test.run(chdir = 'work1', options = opts, arguments = ".")
+test.run(chdir = 'work1', options = opts, arguments = ".",
+         stderr=TestSCons.noisy_ar)
 
 test.run(program = work1_foo, stdout =
 """repository/aaa.c
@@ -141,7 +143,8 @@ test.up_to_date(chdir = 'work1', options = opts, arguments = ".")
 #
 test.writable('repository', 1)
 
-test.run(chdir = 'repository', options = opts, arguments = ".")
+test.run(chdir = 'repository', options = opts, arguments = ".",
+         stderr=TestSCons.noisy_ar)
 
 test.run(program = repository_foo, stdout =
 """repository/aaa.c
@@ -169,7 +172,8 @@ bbb(void)
 }
 """)
 
-test.run(chdir = 'work2', options = opts, arguments = ".")
+test.run(chdir = 'work2', options = opts, arguments = ".",
+         stderr=TestSCons.noisy_ar)
 
 test.run(program = work2_foo, stdout =
 """repository/aaa.c
